# ACD-ARD

./: README.md  pyproject.toml
.github/workflows/: ci.yml
config/: chunks.yml  collections.yml  datasets.yml  parameters.yml  paths.yml
envs/: acd_ard.yml
instructions/: ci.instructions.md  cli.instructions.md  contrib.instructions.md  dask.instructions.md  data.instructions.md  deps.instructions.md  format.instructions.md  notebook.instructions.md  python.intstructions.md  shell.instructions.md  tests.instructions.md
notebooks/: 01_build_manifest.ipynb  convert_to_base_zarr.py  pipeline_example.py  rechunk_zarr.py
scripts/: configure.sh  init_layout.sh  rename_acd_to_acd_ard.py  run_pipeline.sh
src/acd/: core.py
src/acd/cli/: __init__.py  base.py  manifest.py  rechunk.py
src/acd_ard/: __init__.py  core.py
src/acd_ard/cli/: __init__.py  base.py  manifest.py  rechunk.py
tests/: _disabled_test_smoke_pipeline.py  conftest.py  test_cli.py  test_cli_contract.py  test_config.py  test_core.py  test_dask_helper.py  test_min_smoke.py  test_smoke_pipeline.py
