[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acd-ard"
version = "0.1.0"
description = "Analysis-ready data workflows for Australian Climate Data - NetCDF to Zarr conversion pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thomas Moore", email = "thomas@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "xarray",
    "zarr",
    "dask",
    "dask-jobqueue",
    "rechunker",
    "papermill",
    "netcdf4",
    "pyyaml",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
    "types-PyYAML",
]

[project.scripts]
acd-ard = "acd_ard.cli:acd_ard"
acd-ard-manifest = "acd_ard.cli.manifest:manifest"
acd-ard-base     = "acd_ard.cli.base:base"
acd-ard-rechunk  = "acd_ard.cli.rechunk:rechunk"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q -m 'not slow and not hpc'"
testpaths = ["tests"]
markers = [
  "slow: slow tests (off by default)",
  "hpc: requires HPC or large data (off by default)"
]

[tool.ruff]
line-length = 100
target-version = "py311"
ignore = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
packages = ["acd_ard"]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true

